<resources>
    <color name="white">#FFFFFF</color>
    <string name="submit">SUBMIT</string>

    <string name="computing">School of Computing</string>
    <string name="uCode">Unit Code: 3500</string>
    <string name="uCode1">Unit Code: 3145</string>
    <string name="uCode2">Unit Code: 8951</string>
    <string name="uCode3">Unit Code: 2545</string>
    <string name="uCode4">Unit Code: 3300</string>
    <string name="uCode5">Unit Code: 3521</string>
    <string name="uCode6">Unit Code: 3100</string>

    <string name="tourism">School of Tourism</string>
    <string name="nursing">School of Nursing</string>
    <string name="Ap_Science">School of Marine Science</string>


    <string name="app_name">LecEvaluation</string>
    <string name="home">Home</string>
    <string name="btn_login">Login</string>
    <string name="Login">Login</string>
    <string name="loginRegNo">e.g   CT206/0003/16</string>


    <string name="password">Password</string>
    <string name="Enter_password">Enter Password</string>


    <string name="attempts">Attempts Left:</string>
    <string name="Lec">Lecturer Evaluation</string>


    <string name="Register">Register</string>
    <string name="regNo">Reg No</string>

    <string name="hint_enter_regNo">Enter Registration Number</string>
    <string name="btn_sign_up">Sign Up</string>

    <string name="Enter_First_name">Enter First Name</string>
    <string name="Enter_Last_name">Enter Last Name</string>

    <string name="hint_gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="Enter_Email">Enter Email</string>

    <string name="btn_link_signup">Sign Up</string>
    <string name="btn_link_login">Have an account? Login !!</string>
</resources>
