<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComputingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/computing"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="34sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/textView"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            app:cardBackgroundColor="@android:color/darker_gray"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:shadowColor="@color/white"
                android:shadowRadius="@android:integer/config_mediumAnimTime"
                android:text="@string/uCode"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="22sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/cardView"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            app:cardBackgroundColor="@android:color/darker_gray"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:shadowColor="@color/white"
                android:shadowRadius="@android:integer/config_mediumAnimTime"
                android:text="@string/uCode1"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="22sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/cardView1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            app:cardBackgroundColor="@android:color/darker_gray"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:shadowColor="@color/white"
                android:shadowRadius="@android:integer/config_mediumAnimTime"
                android:text="@string/uCode2"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="22sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/cardView2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            app:cardBackgroundColor="@android:color/darker_gray"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:shadowColor="@color/white"
                android:shadowRadius="@android:integer/config_mediumAnimTime"
                android:text="@string/uCode3"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="22sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/cardView3"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            app:cardBackgroundColor="@android:color/darker_gray"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:shadowColor="@color/white"
                android:shadowRadius="@android:integer/config_mediumAnimTime"
                android:text="@string/uCode4"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="22sp"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>




    </RelativeLayout>

</ScrollView>