<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".UserActivity">

    <RelativeLayout
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:text="@string/Lec"
                android:textColor = "#fa9e0e"
                android:layout_marginTop="20dp"
                android:textSize="34sp"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_below="@+id/textView"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="#816a46"
            app:cardCornerRadius="20dp">

            <ImageView
                android:src="@drawable/comp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/computing"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="22sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:shadowColor="@color/white"
                android:shadowRadius="@android:integer/config_mediumAnimTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_below="@+id/cardView"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="#816a46"
            app:cardCornerRadius="20dp">

            <ImageView
                android:src="@drawable/nursing"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/nursing"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="22sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:shadowColor="@color/white"
                android:shadowRadius="@android:integer/config_mediumAnimTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_below="@+id/cardView1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="#816a46"
            app:cardCornerRadius="20dp">

            <ImageView
                android:src="@drawable/marine1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/Ap_Science"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="22sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:shadowColor="@color/white"
                android:shadowRadius="@android:integer/config_mediumAnimTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_below="@+id/cardView2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="#816a46"
            app:cardCornerRadius="20dp">

            <ImageView
                android:src="@drawable/south"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/tourism"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="22sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:shadowColor="@color/white"
                android:shadowRadius="@android:integer/config_mediumAnimTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>